<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_margin"
    android:background="@android:color/white"
    tools:context="com.pappiotc.fragments.CheckInFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/small_margin">

        <TextView
            android:id="@+id/checkin_date_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:paddingLeft="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/small_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/checkin_type_spinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/spiner_height"
            android:layout_weight="0.75"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/client" />

        <Spinner
            android:id="@+id/checkin_client_spinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/spiner_height"
            android:layout_weight="0.75"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:padding="@dimen/small_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/checkin_checkin_button"
            android:layout_width="@dimen/checkin_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/check_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/checkin_cancel_button"
            android:layout_width="@dimen/checkin_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="@dimen/normal_margin"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>

